fixing a responsive overflow issue or two

--- a/plasterdog.css
+++ b/plasterdog.css
@@ -1,4 +1,3 @@
-
 /*
 CHICAGO BLUE = #3399ff
 DARKER BLUE = #06131F
@@ -13,13 +12,11 @@ p.site-description {color: #06131F;	font-size: 1em;	font-weight: bold;}
 .error404 .widget select {visibility: collapse;}
 .avatar.avatar-100.photo {float: left;margin: 0 1em 1em 0;}
 #page{}
-.wcorg-organizer-description {padding-bottom: 2em;}
 /*--- PER BD request we are dropping the cover image option and using a sidebar afterall---*/
 #primary {max-width: 1400px;margin: 0 auto;}
 #main {float: left;width: 70%;}
 .no-sidebar #main{width:100%;}
 #secondary {float: left; width: 23%; margin-left: 2%;display:block!important;}
-.entry-content {margin-right: 3em;}
 /*ELEMENTS THAT SOULD BE CONTAINED - but are no longer since the cover option has been abandoned*/
 p, h1, h2, h3, h4, h5, h6, .entry-content ol, .entry-content ul,aside, .wp-block-gallery,.entry-header, .entry-meta, .entry-footer, 
 .comments-area, .wcorg-organizer-description, .contact-form {/*max-width:1400px!important;margin:0 auto!important;*/}
@@ -124,7 +121,7 @@ p, h1, h2, h3, h4, h5, h6,aside, .entry-content ul, .entry-content ol,  .wp-bloc
 	h1.site-title, p.site-title{font-size: 1.5em; font-weight: bold;}
 	.custom-header {max-height:285px;}
 	.custom-header-media {position: relative;height: 285px;}
-	.custom-header-media .wp-custom-header{margin-left:-25%;width:150%;}
+	.custom-header-media .wp-custom-header{}
 	.custom-header-media .wp-custom-header img {width: 150%;left:0 !important;*/max-width: none;}
 }
 
@@ -181,6 +178,7 @@ p, h1, h2, h3, h4, h5, h6,aside, .entry-content ul, .entry-content ol,  .wp-bloc
 }
 
 @media screen and (max-width: 750px) {
+	html{overflow-x:hidden;}
 	.secondary-navigation.page-navigation-container {float:right;z-index: 9999;position: absolute; bottom:3em; left:1em;}
 	.site-branding {visibility: collapse; height: 0; width: 0;}
 	#header-widget-1.header-widgets-block, #header-widget-2.header-widgets-block, #header-widget-3.header-widgets-block{padding-top:1em;}
@@ -188,8 +186,8 @@ p, h1, h2, h3, h4, h5, h6,aside, .entry-content ul, .entry-content ol,  .wp-bloc
 	ul.social-links, ul.wordcamp-links{top:-6em;}
 	.secondary-navigation .dropdown-toggle {visibility: hidden;}
 	.secondary-navigation.page-navigation-container ul {float: left;z-index: 9999;position: relative;left: 1em;}
-	#header-widget-4.header-widgets-block{grid-column: 1 / 3;grid-row:1 /3; padding-top:4em;}
-	#header-widget-5.header-widgets-block{grid-column: 5 / 7;grid-row:1/ 3; padding-top:4em;}
+	#header-widget-4.header-widgets-block{grid-column: 1 / 3;grid-row:1 /3; padding-top:7em;}
+	#header-widget-5.header-widgets-block{grid-column: 5 / 7;grid-row:1/ 3; padding-top:7em;}
 	ul.wordcamp-links li .dashicons {font-size: 1.75em;margin-right: 1em;}
 	ul.social-links li .dashicons {font-size: 1.75em;margin-right: 1em;}
 }
@@ -197,14 +195,12 @@ p, h1, h2, h3, h4, h5, h6,aside, .entry-content ul, .entry-content ol,  .wp-bloc
 @media screen and (max-width: 600px) {
 	ul.wordcamp-links {	padding-left: 0 !important;}
 	ul.social-links li .dashicons {	font-size: 2em;	margin-right: 1em;}
-
-
 }
 
 @media screen and (max-width: 460px) {
-	ul.wordcamp-links li .dashicons {font-size: 1.65em;margin-right: 1em;}
-	ul.social-links li .dashicons {	font-size: 1.65em;	margin-right: 1em;}
-	.page-navigation-container ul#secondary-menu {top: .5em;}
+	ul.wordcamp-links li .dashicons {font-size: 1.4em;margin-right: 1em;}
+	ul.social-links li .dashicons {	font-size: 1.4em;	margin-right: 1em;}
+	.page-navigation-container ul#secondary-menu {top:1.5em;}
 	ul.wordcamp-links, ul.social-links{margin:1em;}
 	.secondary-navigation.page-navigation-container li {margin-right: 1em;}
 	.custom-header-media {position: relative;height: 250px;}
@@ -212,6 +208,7 @@ p, h1, h2, h3, h4, h5, h6,aside, .entry-content ul, .entry-content ol,  .wp-bloc
 }
 
 @media screen and (max-width: 400px) {
+	.page-navigation-container ul#secondary-menu {top: .5em;}
 	#secondary-menu {padding-bottom: 1em;}
 	ul.wordcamp-links, ul.social-links{margin:.5em;}
 	.custom-header-media {position: relative;height: 240px;}
@@ -219,6 +216,8 @@ p, h1, h2, h3, h4, h5, h6,aside, .entry-content ul, .entry-content ol,  .wp-bloc
 }
 
 @media screen and (max-width: 375px) {
+		ul.wordcamp-links li .dashicons {font-size: 1.25em;margin-right: .5em;}
+	ul.social-links li .dashicons {	font-size: 1.25em;	margin-right: .5em;}
 	.secondary-navigation.page-navigation-container {float:right;z-index: 9999;position: absolute; bottom:1.75em;}	
 	.secondary-navigation.page-navigation-container li {font-size: .75em;}
 }
@@ -290,4 +289,3 @@ p, h1, h2, h3, h4, h5, h6,aside, .entry-content ul, .entry-content ol,  .wp-bloc
 @media screen and (max-width: 600px) {
 	.site-info-generator,  .site-info-network {margin: .5em 0; display: block; text-align: center;}	
 }
-
